# keeper-perms-automation

./: .coverage  .gitignore  .pre-commit-config.yaml  DESIGN.md  KEEPER_API_IMPLEMENTATION.md  Makefile  PRODUCTION_TESTING_PROTOCOL.md  README.md  cli.py  client1_vault_data.csv  create_test_csv.py  customer1_vault_data.csv  pyproject.toml  requirements.txt
.github/workflows/: .pre-commit-config.yml  ci.yml  pre-commit-config
docs/: DESIGN.md  KEEPER_API_IMPLEMENTATION.md  PER_TEAM_FOLDER_STRUCTURE.md  PRODUCTION_TESTING_PROTOCOL.md  VAULT_STORAGE_INTEGRATION.md  perms_config.schema.json
keeper_auto/: checkpoint.py  config.py  csv_schema.py  exceptions.py  importer.py  keeper_client.py  logger.py  models.py  services.py  template.py  validate.py
keeper_auto/application/: __init__.py  handlers.py  services.py
keeper_auto/domain/: __init__.py  models.py  operations.py  validators.py
keeper_auto/infrastructure/: __init__.py  file_adapter.py  keeper_adapter.py  logging_adapter.py  vault_storage_adapter.py
runs/2025-06-30/: perms-apply-20250630.log.jsonl
runs/2025-07-04/: checkpoint-15fef6d2.json  checkpoint-19f066df.json  checkpoint-54b9867d.json  checkpoint-558e2bb2.json  checkpoint-671df5ae.json  checkpoint-c08c55ee.json  checkpoint-d34afaf9.json  checkpoint-test-checkpoint-123.json  perms-apply-20250704.log.jsonl
tests/: test_cli.py  test_comprehensive_coverage.py  test_coverage_boost.py  test_integration_provisioning.py  test_keeper_client.py  test_models_comprehensive.py  test_simple_coverage.py
